--- a/transition-activity/activity.css
+++ b/transition-activity/activity.css
@@ -1,1 +1,10 @@
+button {
+    transition: 2s;
 
+}
+
+button:hover {
+    transition: 2s;
+    background-color: cornflowerblue;
+    color: ghostwhite
+}
